--- a/prime_admin/templates/lms/fund_wallet.html
+++ b/prime_admin/templates/lms/fund_wallet.html
@@ -480,6 +480,9 @@
                 $("#description").append($('<option></option>').attr("value", "PRINTED REVIEWER/BOOK AT PRINTER SHOP").text("PRINTED REVIEWER/BOOK AT PRINTER SHOP"));
                 $("#description").append($('<option></option>').attr("value", "SOFTWARE MAINTENANCE").text("SOFTWARE MAINTENANCE"));
                 $("#description").append($('<option></option>').attr("value", "ELECTRIC FAN").text("ELECTRIC FAN"));
+                $("#description").append($('<option></option>').attr("value", "AIRCON MAINTENANCE").text("AIRCON MAINTENANCE"));
+                $("#description").append($('<option></option>').attr("value", "CCTV INSTALLATION").text("CCTV INSTALLATION"));
+                $("#description").append($('<option></option>').attr("value", "CCTV MAINTENANCE").text("CCTV MAINTENANCE"));
 
                 $("#billing_month_from").rules('remove');
                 $("#billing_month_to").rules('remove');
