Temporary addition of Mandatory Government Fees

--- a/prime_admin/templates/lms/fund_wallet.html
+++ b/prime_admin/templates/lms/fund_wallet.html
@@ -483,6 +483,16 @@
                 $("#description").append($('<option></option>').attr("value", "AIRCON MAINTENANCE").text("AIRCON MAINTENANCE"));
                 $("#description").append($('<option></option>').attr("value", "CCTV INSTALLATION").text("CCTV INSTALLATION"));
                 $("#description").append($('<option></option>').attr("value", "CCTV MAINTENANCE").text("CCTV MAINTENANCE"));
+                $("#description").append($('<option></option>').attr("value", "BIR").text("BIR"));
+                $("#description").append($('<option></option>').attr("value", "MAYORS PERMIT").text("MAYORS PERMIT"));
+                $("#description").append($('<option></option>').attr("value", "BUSINESS PERMIT").text("BUSINESS PERMIT"));
+                $("#description").append($('<option></option>').attr("value", "CEDULA").text("CEDULA"));
+                $("#description").append($('<option></option>').attr("value", "BRGY CLEARANCE").text("BRGY CLEARANCE"));
+                $("#description").append($('<option></option>').attr("value", "FIRE CERTIFICATE").text("FIRE CERTIFICATE"));
+                $("#description").append($('<option></option>').attr("value", "ELECTRICAL FEE").text("ELECTRICAL FEE"));
+                $("#description").append($('<option></option>').attr("value", "OTHERS INSPECTION FEE").text("OTHERS INSPECTION FEE"));
+                
+                
 
                 $("#billing_month_from").rules('remove');
                 $("#billing_month_to").rules('remove');
