feat: add users, settings and logs on header items

--- a/app/admin/templates/admin/admin_header.html
+++ b/app/admin/templates/admin/admin_header.html
@@ -31,16 +31,27 @@
         </span>
     </div>
     <div class="app-header__content">
-        <div class="app-header-left">
-            <!-- <div class="search-wrapper">
-                <div class="input-holder">
-                    <input type="text" class="search-input" placeholder="Type to search">
-                    <button disabled class="search-icon"><span></span></button>
-                </div>
-                <button class="close"></button>
-            </div> -->
-        </div>
         <div class="app-header-right">
+            <ul class="header-menu nav">
+                <li class="btn-group nav-item">
+                    <a href="{{url_for('bp_auth.users')}}" class="nav-link">
+                        <i class="nav-link-icon fa fa-users" style="color: white;"></i>
+                        Users
+                    </a>
+                </li>
+                <li class="dropdown nav-item">
+                    <a href="javascript:void(0);" class="nav-link">
+                        <i class="nav-link-icon fa fa-cog" style="color: white;"></i>
+                        Settings
+                    </a>
+                </li>
+                <li class="btn-group nav-item">
+                    <a href="{{url_for('bp_admin.system_logs')}}" class="nav-link">
+                        <i class="nav-link-icon fa fa-clock" style="color: white;"></i>
+                        Logs
+                    </a>
+                </li>
+            </ul>
             <div class="header-btn-lg pr-0">
                 <div class="widget-content p-0">
                     <div class="widget-content-wrapper">
