feat: 4745742f68994fbdbd7e047a883e31ce

--- a/prime_admin/templates/lms/add_expenses_modal.html
+++ b/prime_admin/templates/lms/add_expenses_modal.html
@@ -37,6 +37,10 @@
                                             <option value="salary">Salary</option>
                                             <option value="rebates">Rebates</option>
                                             <option value="other_expenses">Other Expenses</option>
+                                            <option value="BIR">BIR</option>
+                                            <option value="Business Permit">Business Permit</option>
+                                            <option value="Employee Benefits">Employee Benefits</option>
+                                            <option value="Bookeeper Retainer Fee">Bookeeper's Retainers Fee</option>
                                         </select>
                                     </div>
                                 </div>
