feat: System settings

--- a/app/admin/templates/admin/admin_header.html
+++ b/app/admin/templates/admin/admin_header.html
@@ -41,7 +41,7 @@
                     </a>
                 </li>
                 <li class="dropdown nav-item">
-                    <a href="javascript:void(0);" class="nav-link">
+                    <a href="{{url_for('lms.settings')}}" class="nav-link">
                         <i class="nav-link-icon fa fa-cog" style="color: white;"></i>
                         Settings
                     </a>
