--- a/prime_admin/templates/lms/fund_wallet.html
+++ b/prime_admin/templates/lms/fund_wallet.html
@@ -1158,6 +1158,7 @@
                                         <label for="filter_tab3_year" class="">Year</label>
                                         <select id="filter_tab3_year" class="form-control" required>
                                             <option value="all">All</option>
+                                            <option value="2023">2023</option>
                                             <option value="2022">2022</option>
                                             <option value="2021">2021</option>
                                         </select>
