--- a/prime_admin/templates/lms/registration.html
+++ b/prime_admin/templates/lms/registration.html
@@ -588,6 +588,7 @@
                                 <option value="">Choose...</option>
                                 <option value="1">1</option>
                                 <option value="2">2</option>
+                                <option value="3">3</option>
                             </select>
                             <div class="valid-feedback">
                                 Looks good!
