enhance: refactor print certificate to class

--- a/prime_admin/templates/lms/student_records.html
+++ b/prime_admin/templates/lms/student_records.html
@@ -49,7 +49,7 @@
     STUDENT_INFO_PDF_URL = "{{url_for('lms.print_student_info')}}";
     STUDENTS_AUDIT_PDF_URL = "{{url_for('lms.print_students_pdf')}}";
     STUDENT_AGREEMENT_FORM = "{{url_for('lms.print_student_agreement_form')}}";
-    CERTIFICATE_PDF = "{{url_for('lms.modify_and_download_certificate')}}";
+    CERTIFICATE_PDF = "{{url_for('lms.print_certificate')}}";
     ROLE = "{{current_user.role.name}}";
 </script>
 <script>
